--- a/templates/layouts/__navbar.html
+++ b/templates/layouts/__navbar.html
@@ -6,7 +6,10 @@
                 <a class="nav-link" aria-current="page" href="{% url 'home:index' %}">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="{% url 'account:index' %}">Register</a>
+                <a class="nav-link" aria-current="page" href="{% url 'account:register' %}">Register</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="{% url 'account:login' %}">Login</a>
             </li>
         </ul>
     </div>
