--- a/templates/layouts/__navbar.html
+++ b/templates/layouts/__navbar.html
@@ -5,9 +5,11 @@
             <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="{% url 'home:index' %}">Home</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="{% url 'account:register' %}">Register</a>
-            </li>
+            {% if not request.user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="{% url 'account:register' %}">Register</a>
+                </li>
+            {% endif %}
             {% if not request.user.is_authenticated %}
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="{% url 'account:login' %}">Login</a>
@@ -17,7 +19,7 @@
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="{% url 'account:logout' %}">Logout</a>
                 </li>
-            {% endif %} 
+            {% endif %}
         </ul>
     </div>
 </nav>
