--- a/templates/layouts/__navbar.html
+++ b/templates/layouts/__navbar.html
@@ -17,6 +17,9 @@
             {% endif %}
             {% if request.user.is_authenticated %}
                 <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="{% url 'account:profile' request.user.id %}">Profile</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="{% url 'account:logout' %}">Logout</a>
                 </li>
             {% endif %}
