--- a/account/templates/account/user_profile.html
+++ b/account/templates/account/user_profile.html
@@ -1,4 +1,10 @@
 {% extends '_base.html' %}
 {% block Contents %}
     <h2 class="text-center text-primary">{{ user.username }}</h2>
+    <div class="card">
+        {% for post in posts %}
+            <a href="{% url "home:post" post.id post.slug %}" class="card-body">{{ post.body|truncatewords:8 }}</a>
+        {% endfor %}
+    </div>
+
 {% endblock %}
