--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -3,7 +3,7 @@
     salam bar to
     <div class="card">
         {% for post in posts %}
-            <a href="{% url "home:post" post.id post.slug %}" class="card-body">{{ post.body|truncatewords:8 }}</a>
+            <a href="{{ post.get_absolute_url }}" class="card-body">{{ post.body|truncatewords:8 }}</a>
         {% endfor %}
     </div>
 {% endblock %}
