--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,6 +1,6 @@
 {% extends '_base.html' %}
 {% block Contents %}
-    salam bar to
+    <h3 class="text-center text-info">Home Page</h3>
     <div class="card">
         {% for post in posts %}
             <a href="{{ post.get_absolute_url }}" class="card-body">{{ post.body|truncatewords:8 }}</a>
