--- a/home/templates/home/post.html
+++ b/home/templates/home/post.html
@@ -8,6 +8,7 @@
         <p>{{ post.body }}</p>
         {% if request.user.id == post.user.id %}
             <a href="{% url 'home:delete-post' post.id %} "><button class="btn btn-danger">Delete</button></a>
+            <a href="{% url 'home:update-post' post.id %} "><button class="btn btn-info">update</button></a>
         {% endif %}
     </p>
 {% endblock %}
