--- a/account/templates/account/user_profile.html
+++ b/account/templates/account/user_profile.html
@@ -6,5 +6,8 @@
             <a href="{{ post.get_absolute_url }}" class="card-body">{{ post.body|truncatewords:8 }}</a>
         {% endfor %}
     </div>
+    {% if request.user.id == user.id %}
+        <a href="{% url 'home:create-post' %}"><button class="btn btn-primary">New Post</button></a>
+    {% endif %} 
 
 {% endblock %}
