--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -8,6 +8,7 @@
     {{ form.as_p }}
     <div class="text-center"><button class="btn btn-primary" type="submit">submit</button></div>
 </form>
+    <a href="{% url 'account:reset_password' %}" class="text-center"> Forgot password ? </a>
 </div>
 </div>
 {% endblock %}
