--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -3,11 +3,11 @@
 <div class="container">
 <div class="row justify-content-center">
     <h1 class="text-dark text-center">Login Form</h1>
-    <form action="{% url 'account:login' %}" class="col-md-5" method="POST" novalidate>
+    <form action="" class="col-md-5" method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <div class="text-center"><button class="btn btn-primary" type="submit">submit</button></div>
-</form>
+    </form>
     <a href="{% url 'account:reset_password' %}" class="text-center"> Forgot password ? </a>
 </div>
 </div>
